--- a/Kody/four-lights-demo.html
+++ b/Kody/four-lights-demo.html
@@ -1,18 +1,6 @@
 <!DOCTYPE html>
 <html>
-<!--
- *  Shows a scene (a teapot on a short cylindrical base) that is illuminated
- *  by up to four lights plus global ambient light.  The user can turn the
- *  lights on and off.  The global ambient light is a dim white.  There is 
- *  a white "viewpoint" light that points from the direction of the viewer
- *  into the scene.  There is a red light, a blue light, and a green light
- *  that rotate in circles above the teapot.  (The user can turn the animation
- *  on and off.)  The locations of the colored lights are marked by spheres,
- *  which are gray when the light is off and are colored by some emission color
- *  when the light is on.  The teapot is gray with weak specular highlights.
- *  The base is colored with a spectrum.  (The user can turn the display of
- *  the base on and off.)  The mouse can be used to rotate the scene.
--->
+
 <head>
 <meta charset="UTF-8">
 <title>Four Lights</title>
@@ -23,18 +11,14 @@
 <script>
 
 var camera;
+var animate;
+var drawBase;
+var ambientLight;
+var viewpointLight, redLight, blueLight, greenLight;
 
-var animate;       // checkbox that controls animation
-var drawBase;      // checkbox for turning display of base on and off
-var ambientLight;  // checkbox for turning global ambient light on and off
-var viewpointLight, redLight, blueLight, greenLight;  // checkboxes for turning lights on and off
+var animating = false;
+var frameNumber = 0;
 
-var animating = false;  // tells whether the animation is running
-var frameNumber = 0;  // frame number for use in animation
-
-//------------------- Drawing functions ----------------------------------------
-
-/* Draws a sphere. */
 function uvSphere(radius, slices, stacks) {
     var i,j;
     for (j = 0; j < stacks; j++) {
@@ -56,20 +40,15 @@ function uvSphere(radius, slices, stacks) {
             var y2 = sinLong * cosLat2;
             var z2 = sinLat2;
             glNormal3d(x2,y2,z2);
-	    glVertex3d(radius*x2,radius*y2,radius*z2);
-	    glNormal3d(x1,y1,z1);
+            glVertex3d(radius*x2,radius*y2,radius*z2);
+            glNormal3d(x1,y1,z1);
             glVertex3d(radius*x1,radius*y1,radius*z1);
         }
         glEnd();
     }
-} // end uvSphere
+}
 
-/*  Sets the positions of the colored lights and turns them on and off, depending on
- *  the state of the redLight, greenLight, and blueLight options.  Draws a small
- *  sphere at the location of each light.
- */
 function lights() {
-
     glColor3d(0.5,0.5,0.5);
     var zero = [ 0, 0, 0, 1 ];
     glMaterialfv(GL_FRONT_AND_BACK, GL_SPECULAR, zero);
@@ -124,13 +103,9 @@ function lights() {
     uvSphere(0.5, 16, 8);
     glPopMatrix();
 
-    glMaterialfv(GL_FRONT_AND_BACK, GL_EMISSION, zero); // Turn off emission color!
-} // end lights()
+    glMaterialfv(GL_FRONT_AND_BACK, GL_EMISSION, zero);
+}
 
-
-/*  Fills the array with RGBA color components corresponding the given HSV color 
- *  components, where h, s, and v are in the range 0.0 to 1.0.
- */
 function colorArrayForHue(h, s, v) {
     var r,g,b;
     var c,x;
@@ -155,11 +130,6 @@ function colorArrayForHue(h, s, v) {
     return array;
 }
 
-/*  Draws a cylinder with height 2 and radius 1, centered at the origin, with its axis
- *  along the z-axis.  A spectrum of hues is applied to the vertices along the edges
- *  of the cylinder.  (Since GL_COLOR_MATERIAL is enabled in this program, the colors
- *  specified here are used as ambient and diffuse material colors for the cylinder.)
- */
 function drawCylinder() {
     var i;
     var rgba;
@@ -170,14 +140,14 @@ function drawCylinder() {
         var y = Math.sin(angle);
         rgba = colorArrayForHue(i/64.0, 1, 0.6);
         glColor3dv(rgba);
-        glNormal3d( x, y, 0 );  // Normal for both vertices at this angle.
-        glVertex3d( x, y, 1 );  // Vertex on the top edge.
-        glVertex3d( x, y, -1 ); // Vertex on the bottom edge.
+        glNormal3d( x, y, 0 );
+        glVertex3d( x, y, 1 );
+        glVertex3d( x, y, -1 );
     }
     glEnd();
     glNormal3d( 0, 0, 1 );
-    glBegin(GL_TRIANGLE_FAN);  // Draw the top, in the plane z = 1.
-    glColor3d(1,1,1);  // ambient and diffuse for center
+    glBegin(GL_TRIANGLE_FAN);
+    glColor3d(1,1,1);
     glVertex3d( 0, 0, 1);
     for (i = 0; i <= 64; i++) {
         var angle = 2*Math.PI/64 * i;
@@ -189,8 +159,8 @@ function drawCylinder() {
     }
     glEnd();
     glNormal3f( 0, 0, -1 );  
-    glBegin(GL_TRIANGLE_FAN);  // Draw the bottom, in the plane z = -1
-    glColor3d(1,1,1);  // ambient and diffuse for center
+    glBegin(GL_TRIANGLE_FAN);
+    glColor3d(1,1,1);
     glVertex3d( 0, 0, -1);
     for (i = 64; i >= 0; i--) {
         var angle = 2*Math.PI/64 * i;
@@ -203,21 +173,16 @@ function drawCylinder() {
     glEnd();    
 }
 
-/* Draws the scene.
- */
 function display() {
-
     glClearColor(0,0,0,1);
     glClear( GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT ); 
 
     camera.apply();
-
     lights();
 
     if (ambientLight.checked) {
         glLightModelfv(GL_LIGHT_MODEL_AMBIENT, [0.15, 0.15, 0.15, 1] );
-    }
-    else {
+    } else {
         glLightModelfv(GL_LIGHT_MODEL_AMBIENT, [0, 0, 0, 1] );
     }
 
@@ -225,26 +190,46 @@ function display() {
         glMaterialfv(GL_FRONT_AND_BACK, GL_SPECULAR, [0, 0, 0, 1] );
 
         glPushMatrix();
-        glTranslated(0, -5, 0);
+        glTranslated(0, -1.6, 0);
         glRotated(-90, 1, 0, 0);
         glScaled(10,10,0.5);
         drawCylinder();
         glPopMatrix();
     }
 
-    glColor3d(0.7,0.7,0.7);  // sets diffuse and ambient color for teapot
-
-    glMaterialfv(GL_FRONT_AND_BACK, GL_SPECULAR, [0.2, 0.2, 0.2, 1]);
-
-    glPushMatrix();
-    glTranslatef(0,0.68,0);
-    glScalef(0.65,0.65,0.65);
-    glsimDrawModel(teapotModel);
-    glPopMatrix();
+    drawPyramid();
 }
 
-/* Initialization, including setting up a camera and configuring the four lights.
- */
+function drawPyramid() {
+    let vertices = [];
+    let numSides = 12;
+    let radius = 5;
+    let height = 7.5;
+
+    for (let i = 0; i < numSides; i++) {
+        let angle = 2 * Math.PI * i / numSides;
+        vertices.push([radius * Math.cos(angle), -2, radius * Math.sin(angle)]);
+    }
+    vertices.push([0, height, 0]);
+
+    glColor3f(0.5, 0.5, 0.5);
+
+    for (let i = 0; i < numSides; i++) {
+        glBegin(GL_TRIANGLES);
+        glVertex3f(vertices[i][0], vertices[i][1], vertices[i][2]);
+        glVertex3f(vertices[(i + 1) % numSides][0], vertices[(i + 1) % numSides][1], vertices[(i + 1) % numSides][2]);
+        glVertex3f(vertices[numSides][0], vertices[numSides][1], vertices[numSides][2]);
+        glEnd();
+    }
+
+    glColor3f(0.5, 0.5, 0.5);
+    glBegin(GL_POLYGON);
+    for (let i = 0; i < numSides; i++) {
+        glVertex3f(vertices[i][0], vertices[i][1], vertices[i][2]);
+    }
+    glEnd();
+}
+
 function initGL() {
     glClearColor(0, 0, 0, 1);  
     glEnable(GL_DEPTH_TEST); 
@@ -278,12 +263,11 @@ function initGL() {
     glLightfv(GL_LIGHT3, GL_SPECULAR, bl);
 }
 
-/* Animation function, called every 30 milliseconds if an animation is runnin */
 function doFrame() {
     if (animating) {
-	frameNumber++;
-	display();
-	setTimeout(doFrame, 30);
+        frameNumber++;
+        display();
+        setTimeout(doFrame, 30);
     }
 }
 
@@ -294,7 +278,7 @@ function init() {
     catch (e) {
         document.getElementById("canvas-holder").innerHTML="<p><b>Sorry, an error occurred:<br>" +
                 e + "</b></p>";
-	return;
+        return;
     }
     animate = document.getElementById("animate");
     drawBase = document.getElementById("drawBase");
@@ -317,13 +301,13 @@ function init() {
     blueLight.onchange = display;
     greenLight.onchange = display;
     animate.onchange = function() {
-	if (animate.checked) {
-	    animating = true;
-	    doFrame();
-	}
-	else {
-	    animating = false;
-	}
+        if (animate.checked) {
+            animating = true;
+            doFrame();
+        }
+        else {
+            animating = false;
+        }
     }
     initGL();
     camera = new Camera();
@@ -342,7 +326,7 @@ function init() {
 <h3 id="headline">Four Lights Demo</h3>
 
 <div id="canvas-holder">
-<canvas id="maincanvas" width="400" height="400"></canvas>
+<canvas id="maincanvas" width="500" height="500"></canvas>
 </div>
 
 <div id="tools">
@@ -352,59 +336,17 @@ function init() {
 <label><input type="checkbox" id="ambientLight">Global Ambient</label><br><br>
 <label><input type="checkbox" id="viewpointLight">Viewpoint Light</label><br>
 <label><input type="checkbox" id="redLight">Red Light</label><br>
-<label><input type="checkbox" id="greenLight">Green Light</label><br>
+<label><input type="checkbox" cheked id="greenLight">Green Light</label><br>
 <label><input type="checkbox" id="blueLight">Blue Light</label><br>
-
-
 </p>
 </div>
 
 </div>
 
-
-
 <div id="help-content" style="display:none">
-<h3>About this demo...</h3>
-<p>The demo shows a scene that is illuminated by four light sources, as well
-as by a dim global ambient light.  There is a "viewpoint" light, which is a
-white light shining into the scene from the direction of the viewer.
-There are three colored positional lights, with a small sphere at the
-position of each light.  The checkboxes allow you to turn the
-lights off and on.  You can control whether the base is displayed.
-You can turn on an animation that makes the colored lights fly
-in circles around the teapot.  And you can rotate the scene as a whole
-using your mouse.</p>
-<p>Some things to do:  Turn off all of the lights except one, and note
-the effect of that light on the teapot.  (Maybe turn off the base so it
-doesn't distract you.) For the colored lights, be sure to use animation
-so that you can see how the colors on the teapot change.  Try it
-with only two colored lights turned on, and see how their colors combine.
-Note that when one a colored light is turned on, it adds some of its
-color to the ambient light; to see the effect look at the bottom
-of the teapot, with just one light turned on (and display of the base turned off).</p>
-<p>Note that when the only light source is a single colored light, part of the base is black;
-this is because, for example, a part of a surface that contains no red will
-not reflect any red light.</p>
-<p>You might also note that the teapot does not cast shadoes on the base.  OpenGL
-does not support shadows, except with a lot of extra work.</p>
-<p>The base has a material that changes colors around the edge of the cylinder.
-This is meant as a demonstration of using different material colors at different
-vertices of the same primitive. It also uses <i>GL_COLOR_MATERIAL</i> so that
-the material colors can be set by calling <i>glColor3fv</i> instead of
-<i>glMaterialfv</i>.</p>
+
 </div>
 
 
-
-<!-- support for help text -- do not change. -->
-<div id="help-icon">
-<img src="../image/question32.png" onclick="showDemoHelp()"
-    title="Click here for information about this demo." width="32" height="32">
-</div>
-<div id="hide-help-icon">
-<img src="../image/close32.png" onclick="showDemoHelp()"
-    title="Click here to return to the demo." width="65" height="32">
-</div>
-<div id="helpBG" style="display:none"></div>
 </body>
 </html>
